# Ryuri

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  release.yml
.kiro/specs/auth-middleware/: design.md  requirements.md  tasks.md
.kiro/specs/auto-thumbnail-fetch/: design.md  requirements.md  tasks.md
.kiro/specs/comic-reader/: design.md  requirements.md  tasks.md
.kiro/specs/content-store/: design.md  requirements.md  tasks.md
.kiro/specs/frontend-api/: design.md  requirements.md  tasks.md
.kiro/specs/openapi-dev-feature/: design.md  requirements.md  tasks.md
.kiro/specs/pinia-state-management/: design.md  requirements.md  tasks.md
.kiro/specs/scan-queue/: design.md  requirements.md  tasks.md
.kiro/specs/scan-queue-page/: design.md  requirements.md  tasks.md
backend/: .gitignore  Cargo.toml  KOMGA_API.md  build.rs
backend/locales/: app.yml
backend/migrations/: 20260204202616_init.sql  20260214000000_fix_chapter_file_types.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs  openapi.rs  router.rs  state.rs  utils.rs
backend/src/extractors/: archive.rs  comic.rs  epub.rs  mod.rs  novel.rs  pdf.rs
backend/src/handlers/: apikey.rs  auth.rs  bangumi.rs  content.rs  filesystem.rs  komga.rs  library.rs  mod.rs  progress.rs  scan_queue.rs  static_files.rs
backend/src/middlewares/: auth.rs  mod.rs
backend/src/models/: apikey.rs  content.rs  library.rs  mod.rs  progress.rs  scan_queue.rs  user.rs
backend/src/repository/: apikey.rs  content.rs  library.rs  mod.rs  progress.rs  user.rs
backend/src/services/: auth.rs  bangumi.rs  content.rs  library.rs  mod.rs  progress.rs  scan.rs  scan_queue.rs  scheduler.rs  watch.rs
backend/tests/: auth_middleware_props.rs  auth_props.rs  content_props.proptest-regressions  content_props.rs  error_props.rs  extractor_props.rs  library_props.rs  openapi_props.rs  progress_props.rs  scan_props.rs  scan_queue_props.rs  scan_scheduler_props.proptest-regressions  scan_scheduler_props.rs  serialization_props.rs
docs/: zh-CN.README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  i18n.ts  main.ts  router.ts  style.css
frontend/src/api/: apikey.ts  auth.ts  bangumi.ts  client.ts  content.ts  filesystem.ts  index.ts  library.ts  progress.ts  reader.ts  types.ts
frontend/src/api/__tests__/: auth.test.ts  bangumi.test.ts  client.prop.test.ts  content.test.ts  content.thumbnail.prop.test.ts  library.test.ts  progress.test.ts  reader.test.ts  types.prop.test.ts
frontend/src/components/: AppSidebar.vue  NavMain.vue  NavUser.vue  SiteHeader.vue
frontend/src/components/header/: SiteHeader.vue
frontend/src/components/reader/: ComicReader.vue  EpubReader.vue  ReaderContainer.vue  ReaderControls.vue  ReaderProgress.vue  ReaderSettingsDialog.vue  index.ts
frontend/src/components/sidebar/: AppSidebar.vue  CreateLibraryDialog.vue  LibrarySettingDialog.vue  NavLibraries.vue  NavMain.vue  NavUser.vue  UserSettingsDialog.vue
frontend/src/components/ui/path-selector/: PathSelector.vue
frontend/src/components/ui/sidebar/: SidebarInset.vue
frontend/src/composables/: useAuth.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/locales/: en.json  zh.json
frontend/src/stores/: useApiKeyStore.ts  useAuthStore.ts  useContentStore.ts  useLibraryStore.ts  useReaderStore.ts  useScanTaskStore.ts  useUIStore.ts
frontend/src/types/: tabler-icons.d.ts
frontend/src/views/: Content.vue  Dashboard.vue  Library.vue  Login.vue  Reader.vue  ScanQueue.vue  ScanTask.vue
frontend/tests/stores/: auth.props.test.ts  content.props.test.ts  library.props.test.ts  scanQueue.props.test.ts  ui.props.test.ts
