[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
epub = "2.1.5"
image = "0.25.9"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
notify = "8.2.0"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
unrar = "0.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zip = "6.0.0"
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
], optional = true }
utoipa-axum = { version = "0.2.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.23.0"
backend = { path = ".", features = ["test-utils"] }

[features]
dev = ["dep:utoipa", "dep:utoipa-axum", "dep:utoipa-swagger-ui"]
test-utils = []
