[package]
name = "backend"
version = "0.2.3"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
epub = "2.1.5"
image = "0.25.9"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
notify = "8.2.0"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
unrar = "0.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zip = "7.0.0"
rust-embed = "8.9.0"
mime_guess = "2.0.5"
clap = { version = "4.5.53", features = ["derive"] }
rust-i18n = "3.1.5"
sys-locale = "0.3.2"

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3.24.0"
backend = { path = ".", features = ["test-utils"] }

[features]
test-utils = []
