[package]
name = "backend"
version = "0.2.4"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono", "env-filter"] }
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
epub = "2.1.5"
mupdf = "0.6.0"
image = "0.25.9"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
notify = "8.2.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
unrar = "0.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# Due to https://github.com/hasenbanck/lzma-rust2/issues/86, need to disable the corresponding features to compile normally
zip = { version = "7.4.0", default-features = false, features = [
    "aes-crypto",
    "bzip2",
    "deflate",
    "deflate64",
    # "lzma",
    "ppmd",
    "time",
    # "xz",
    "zstd",
] }

rust-embed = "8.11.0"
mime_guess = "2.0.5"
clap = { version = "4.5.58", features = ["derive"] }
rust-i18n = "3.1.5"
sys-locale = "0.3.2"

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.25.0"
backend = { path = ".", features = ["test-utils"] }

[features]
test-utils = []
